--- a/monolist/app/assets/stylesheets/application.css
+++ b/monolist/app/assets/stylesheets/application.css
@@ -16,7 +16,6 @@ footer {
   margin-top: 5px;
   height: 40px;
 }
-
 /* cover */
 .cover {
   margin-top: -20px;
@@ -42,4 +41,27 @@ footer {
   color: #fff;
   font-weight: bold;
   letter-spacing: 0.15em;
+}
+/* search */
+.search {
+  margin-bottom: 20px;
+}
+
+/* item */
+.item .panel-body {
+  height: 70px;
+}
+.item .panel-heading {
+  height: 250px;
+}
+.item .panel-heading img {
+  height: 100%;
+  max-width: 100%;
+}
+p.item-title {
+  /* 文の行数を2行に保ち、最後に ... を追加するスタイル */
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
 }
