--- a/monolist/app/views/layouts/_footer.html.erb
+++ b/monolist/app/views/layouts/_footer.html.erb
@@ -1,3 +1,3 @@
-  1 <footer>
-      <div class="text-center text-muted">© 2016 MONOLIST.</div>
-  </footer>
+<footer>
+  <div class="text-center text-muted">© 2016 MONOLIST.</div>
+</footer>
