--- a/monolist/app/views/layouts/_navbar.html.erb
+++ b/monolist/app/views/layouts/_navbar.html.erb
@@ -14,13 +14,24 @@
         <ul class="nav navbar-nav navbar-right">
           <% if logged_in? %>
             <li>
-              <a href="#">
-                <%= link_to new_item_path do %>
-                  <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
-                  アイテムを追加
-                <% end %>
-                </a>
+              <%= link_to new_item_path do %>
+                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                アイテムを追加
+              <% end %>
             </li>
+            
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                <span class="glyphicon glyphicon-signal" aria-hidden="true"></span>
+                ランキング
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu">
+                <li><%= link_to 'Wantランキング', rankings_want_path %></li>
+                <li><%= link_to 'Haveランキング', rankings_have_path %></li>
+              </ul>
+            </li>
+
 
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
