--- a/neotrip/app/views/layouts/application.html.erb
+++ b/neotrip/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <!-- Bootstrap JavaScript-->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <%= favicon_link_tag %>
   </head>
 
   <body>
